syntax = "proto3";

service CustomerService {
    rpc GetAll (Empty) returns (CustomerList) {}
}

service LoginService {
    rpc Login (LoginRequest) returns (User) {}
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message User {
  string ref = 1;
  string name = 2;
  string accessKeyId = 3;
  repeated string roles = 4;
  string token = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RoleRules {
  string name = 1;
  string api = 2;
  repeated string functions = 3;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerRequestId {
    string id = 1;
}